# HS-textEditor

./: CMakeLists.txt
src/: main.cpp
